Red Fran hecha un vistazo

--- a/4-Red_Siamesa/Code/main.ipynb
+++ b/4-Red_Siamesa/Code/main.ipynb
@@ -2,9 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'tensorflow'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m/home/jacobo15defrutos/AVS9/4-Red_Siamesa/Code/main.ipynb Cell 1\u001b[0m line \u001b[0;36m3\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/jacobo15defrutos/AVS9/4-Red_Siamesa/Code/main.ipynb#W0sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/jacobo15defrutos/AVS9/4-Red_Siamesa/Code/main.ipynb#W0sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpandas\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mpd\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/jacobo15defrutos/AVS9/4-Red_Siamesa/Code/main.ipynb#W0sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mtensorflow\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mtf\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/jacobo15defrutos/AVS9/4-Red_Siamesa/Code/main.ipynb#W0sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mmatplotlib\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mpyplot\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mplt\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/jacobo15defrutos/AVS9/4-Red_Siamesa/Code/main.ipynb#W0sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mkeras\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mapplications\u001b[39;00m \u001b[39mimport\u001b[39;00m VGG19\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'tensorflow'"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -52,7 +64,7 @@
     "\n",
     "train_generator = datagen.flow_from_dataframe(\n",
     "    dataframe=df_train_basic,\n",
-    "    directory=r\"D:\\Users\\jacob\\AVS9\\Data\\saved_seg_class_images\\train_basic\",\n",
+    "    directory=r\"/home/jacobo15defrutos/AVS9/Data/saved_seg_class_images/train_basic\",\n",
     "    x_col=\"Name\",\n",
     "    y_col=\"Label\",\n",
     "    batch_size=10,\n",
@@ -70,7 +82,7 @@
    "source": [
     "val_generator = datagen.flow_from_dataframe(\n",
     "    dataframe=df_val,\n",
-    "    directory=r\"D:\\Users\\jacob\\AVS9\\Data\\saved_seg_class_images\\val\",\n",
+    "    directory=r\"/home/jacobo15defrutos/AVS9/Data/saved_seg_class_images/val\",\n",
     "    x_col=\"Name\",\n",
     "    y_col=\"Label\",\n",
     "    batch_size=10,\n",
@@ -91,7 +103,7 @@
     "df_test['Label']= df_test['Label'].astype(str)\n",
     "test_generator = datagen.flow_from_dataframe(\n",
     "    dataframe=df_test,\n",
-    "    directory=r\"D:\\Users\\jacob\\AVS9\\Data\\saved_seg_class_images\\test\",\n",
+    "    directory=r\"/home/jacobo15defrutos/AVS9/Data/saved_seg_class_images/test\",\n",
     "    x_col=\"Name\",\n",
     "    y_col=\"Label\",\n",
     "    batch_size=1,\n",
