--- a/4-Red_Siamesa/Code/main.ipynb
+++ b/4-Red_Siamesa/Code/main.ipynb
@@ -2,57 +2,103 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'tensorflow'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m/home/jacobo15defrutos/AVS9/4-Red_Siamesa/Code/main.ipynb Cell 1\u001b[0m line \u001b[0;36m3\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/jacobo15defrutos/AVS9/4-Red_Siamesa/Code/main.ipynb#W0sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/jacobo15defrutos/AVS9/4-Red_Siamesa/Code/main.ipynb#W0sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpandas\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mpd\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/jacobo15defrutos/AVS9/4-Red_Siamesa/Code/main.ipynb#W0sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mtensorflow\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mtf\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/jacobo15defrutos/AVS9/4-Red_Siamesa/Code/main.ipynb#W0sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mmatplotlib\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mpyplot\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mplt\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/jacobo15defrutos/AVS9/4-Red_Siamesa/Code/main.ipynb#W0sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mkeras\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mapplications\u001b[39;00m \u001b[39mimport\u001b[39;00m VGG19\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'tensorflow'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "import tensorflow as tf\n",
     "import matplotlib.pyplot as plt\n",
+    "import cv2\n",
     "from keras.applications import VGG19\n",
     "from keras.preprocessing.image import ImageDataGenerator\n",
     "from keras.applications.vgg19 import VGG19\n",
     "from utils import to_grayscale_then_rgb\n",
     "from keras.models import Model\n",
     "from keras.layers import Input, Conv2D, MaxPooling2D, Flatten, Dense\n",
-    "from keras.optimizers import Adam,SGD"
+    "from keras.optimizers import Adam,SGD\n",
+    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_train_b_csv='..\\Iris_train_basic_seg_list.csv'\n",
-    "df_train_basic= pd.read_csv(file_train_b_csv)\n",
-    "datagen=ImageDataGenerator(rescale=1./255.)#,preprocessing_function=to_grayscale_then_rgb)\n",
-    "df_train_basic['Label']= df_train_basic['Label'].astype(str)\n",
-    "df_train_basic\n"
+    "class ContrastiveLoss:\n",
+    "    def __init__(self, margin=1.0):\n",
+    "        self.margin = margin\n",
+    "\n",
+    "    def forward(self, x0, x1, y):\n",
+    "        # Euclidean distance\n",
+    "        diff = x0 - x1\n",
+    "        dist_sq = np.sum(np.power(diff, 2), axis=1)\n",
+    "        dist = np.sqrt(dist_sq)\n",
+    "\n",
+    "        mdist = self.margin - dist\n",
+    "        dist = np.clip(mdist, a_min=0.0, a_max=None)\n",
+    "        loss = y * dist_sq + (1 - y) * np.power(dist, 2)\n",
+    "        loss = np.sum(loss) / 2.0 / x0.shape[0]\n",
+    "        return loss"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train shape:  (228, 2)\n",
+      "Test shape:  (57, 2)\n"
+     ]
+    }
+   ],
    "source": [
-    "file_val_csv='..\\Iris_val_basic_seg_list.csv'\n",
-    "df_val= pd.read_csv(file_val_csv)\n",
-    "df_val['Label']= df_val['Label'].astype(str)\n"
+    "file_data_b_csv=r'/home/jacobo15defrutos/AVS9/4-Red_Siamesa/total_imgs.csv'\n",
+    "df= pd.read_csv(file_data_b_csv)\n",
+    "df_train, df_test = train_test_split(df, test_size=0.2,random_state=42)\n",
+    "print(\"Train shape: \",df_train.shape)\n",
+    "print(\"Test shape: \",df_test.shape)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_43884/1756429171.py:13: RuntimeWarning: divide by zero encountered in log\n",
+      "  train_abs=np.log(abs(train_fft))\n"
+     ]
+    }
+   ],
+   "source": [
+    "labels_train= df_train['Label']\n",
+    "train_list=[]\n",
+    "target_size = (224, 224)\n",
+    "folder= '/home/jacobo15defrutos/AVS9/5-Pruebas/Total_images/'\n",
+    "for name in df_train['Name']:\n",
+    "    path= folder + name\n",
+    "    img=cv2.imread(path) #,cv2.IMREAD_GRAYSCALE\n",
+    "    img= cv2.resize(img,target_size)\n",
+    "    train_list.append(img)\n",
+    "train= np.array(train_list)\n",
+    "\n",
+    "train_fft= np.fft.fftshift(np.fft.fft2(train))\n",
+    "train_abs=np.log(abs(train_fft))\n",
+    "train_n=cv2.normalize(train_abs,None,0, 255, cv2.NORM_MINMAX)\n",
+    "x_train=np.uint8(train_n)\n",
+    "# Convert the original labels to one-hot encoded labels\n",
+    "y_train = np.zeros((labels_train.shape[0], 3))\n",
+    "y_train[np.arange(labels_train.shape[0]), labels_train] = 1"
    ]
   },
   {
@@ -62,55 +108,23 @@
    "outputs": [],
    "source": [
     "\n",
-    "train_generator = datagen.flow_from_dataframe(\n",
-    "    dataframe=df_train_basic,\n",
-    "    directory=r\"/home/jacobo15defrutos/AVS9/Data/saved_seg_class_images/train_basic\",\n",
-    "    x_col=\"Name\",\n",
-    "    y_col=\"Label\",\n",
-    "    batch_size=1,\n",
-    "    seed=42,\n",
-    "    shuffle=True,\n",
-    "    class_mode=\"categorical\",\n",
-    "    target_size=(224, 224))#540,810\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "val_generator = datagen.flow_from_dataframe(\n",
-    "    dataframe=df_val,\n",
-    "    directory=r\"/home/jacobo15defrutos/AVS9/Data/saved_seg_class_images/val\",\n",
-    "    x_col=\"Name\",\n",
-    "    y_col=\"Label\",\n",
-    "    batch_size=10,\n",
-    "    seed=42,\n",
-    "    shuffle=True,\n",
-    "    class_mode=\"categorical\",\n",
-    "    target_size=(224, 224))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file_test_csv='..\\Iris_test_basic_seg_list.csv'\n",
-    "df_test= pd.read_csv(file_test_csv)\n",
-    "df_test['Label']= df_test['Label'].astype(str)\n",
-    "test_generator = datagen.flow_from_dataframe(\n",
-    "    dataframe=df_test,\n",
-    "    directory=r\"/home/jacobo15defrutos/AVS9/Data/saved_seg_class_images/test\",\n",
-    "    x_col=\"Name\",\n",
-    "    y_col=\"Label\",\n",
-    "    batch_size=1,\n",
-    "    seed=42,\n",
-    "    shuffle=False,\n",
-    "    class_mode=None,\n",
-    "    target_size=(224, 224))"
+    "labels_test= df_test['Label']\n",
+    "test_list=[]\n",
+    "target_size = (224, 224)\n",
+    "folder= '/home/jacobo15defrutos/AVS9/5-Pruebas/Total_images/'\n",
+    "for name in df_test['Name']:\n",
+    "    path= folder + name\n",
+    "    img=cv2.imread(path)#, cv2.IMREAD_GRAYSCALE\n",
+    "    img= cv2.resize(img,target_size)\n",
+    "    test_list.append(img)\n",
+    "test= np.array(test_list)\n",
+    "test_fft= np.fft.fftshift(np.fft.fft2(test))\n",
+    "test_abs=np.log(abs(test_fft))\n",
+    "test_n=cv2.normalize(test_abs,None,0, 255, cv2.NORM_MINMAX)\n",
+    "x_test=np.uint8(test_n)\n",
+    "# Convert the original labels to one-hot encoded labels\n",
+    "y_test = np.zeros((labels_test.shape[0], 3))\n",
+    "y_test[np.arange(labels_test.shape[0]), labels_test] = 1\n"
    ]
   },
   {
@@ -121,7 +135,7 @@
    "source": [
     "# Definir la arquitectura de LeNet-5\n",
     "input_shape=(224, 224, 1)\n",
-    "\n",
+    "loss_fn = ContrastiveLoss()\n",
     "def build_LeNet5(input_shape, learning_ratea=0.001):\n",
     "    input_layer = Input(shape=input_shape)\n",
     "\n",
@@ -132,15 +146,15 @@
     "\n",
     "    x = Flatten()(x)\n",
     "    x = Dense(120, activation='relu')(x)\n",
-    "    x = Dense(84, activation='relu')(x)\n",
-    "    output_layer = Dense(2, activation='sigmoid')(x)\n",
+    "    output_layer = Dense(84, activation='relu')(x)\n",
+    "    #output_layer = Dense(3, activation='softmax')(x)\n",
     "\n",
     "    model = Model(inputs=input_layer, outputs=output_layer)\n",
-    "    model.compile(optimizer=Adam(learning_rate=learning_ratea), loss='binary_crossentropy', metrics=['accuracy'])\n",
+    "    model.compile(optimizer=Adam(learning_rate=learning_ratea), loss=loss_fn, metrics=['accuracy'])\n",
     "\n",
     "    return model\n",
     "\n",
-    "model=build_LeNet5(input_shape,0.0001)\n",
+    "model=build_LeNet5(input_shape,0.001)\n",
     "\n",
     "model.summary()\n"
    ]
@@ -153,12 +167,12 @@
    "source": [
     "learning_rate=0.001\n",
     "input_shape=(224,224,3)\n",
-    "base_model = VGG19(weights='imagenet',input_shape=input_shape,include_top=True)\n",
+    "base_model = VGG19(weights='imagenet',input_shape=input_shape,include_top=True)#,include_top=True\n",
     "#base_model.get_layer(name='predictions')\n",
     "# # Remove the original output layer (the 'predictions' layer)\n",
-    "output_layer = Dense(2, activation='sigmoid', name='custom_output')(base_model.layers[-2].output)\n",
+    "output_layer = Dense(3, activation='softmax', name='custom_output')(base_model.layers[-1].output)\n",
     "model = Model(inputs=base_model.input, outputs=(output_layer))\n",
-    "model.compile(optimizer=Adam(learning_rate=learning_rate), loss='binary_crossentropy', metrics=['accuracy'])\n",
+    "model.compile(optimizer=Adam(learning_rate=learning_rate), loss='categorical_crossentropy', metrics=['accuracy'])\n",
     "model.summary()"
    ]
   },
@@ -168,10 +182,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "STEP_SIZE_TRAIN=train_generator.n//train_generator.batch_size\n",
-    "STEP_SIZE_VALID=val_generator.n//val_generator.batch_size\n",
-    "STEP_SIZE_TEST=test_generator.n//test_generator.batch_size\n",
-    "#model.reset_states()"
+    "hist=model.fit(x=x_train, y=y_train, batch_size= 10, validation_split=0.15, epochs=20,verbose=1)"
    ]
   },
   {
@@ -180,9 +191,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hist=model.fit(x=train_generator, steps_per_epoch=STEP_SIZE_TRAIN, validation_data=val_generator, \n",
-    "                    validation_steps=STEP_SIZE_VALID,\n",
-    "                    epochs=20,verbose=1)"
+    "plt.plot(np.log10(h.history['loss']))\n",
+    "plt.plot(np.log10(h.history['val_loss']), 'r')\n",
+    "plt.legend(['train loss', 'val loss'])"
    ]
   },
   {
@@ -191,10 +202,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_generator.reset()\n",
-    "pred=model.predict(test_generator,\n",
-    "steps=STEP_SIZE_TEST,\n",
-    "verbose=1)\n",
+    "plt.plot(h.history['accuracy'])\n",
+    "plt.plot(h.history['val_accuracy'], 'r')\n",
+    "plt.legend(['train acc', 'val acc'])\n",
+    "print('train acc: %.2f %% \\nval acc: %.2f %%'%(h.history['accuracy'][-1]*100,h.history['val_accuracy'][-1]*100))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pred=model.predict(x_test,verbose=1)\n",
     "predicted_class_indices=np.argmax(pred,axis=1)\n",
     "predicted_class_indices"
    ]
