Intentos con fft

--- a/5-Pruebas/LDA.ipynb
+++ b/5-Pruebas/LDA.ipynb
@@ -30,7 +30,7 @@
     }
    ],
    "source": [
-    "file_train_b_csv=r'/home/jacobo15defrutos/AVS9/5-Pruebas/total_imgs.csv'\n",
+    "file_train_b_csv=r'/home/jacobo15defrutos/AVS9/Data/Total_images'\n",
     "df_train= pd.read_csv(file_train_b_csv)\n",
     "labels_train= df_train['Label']\n",
     "train_list=[]\n",
